# pyodide-patterns

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.adoc  CONTRIBUTING.md  README.adoc  README.md  coop-coep-sw.js  index.html  pyproject.toml  pytest.ini  requirements.txt  setup.py  worker_hub.js  worker_monolith.js
.github/workflows/: test.yml
_my_local_package/: README.adoc  README.md  pyproject.toml
_my_local_package/my_local_package/: __init__.py
deployment/: README.md
deployment/github-pages/: coop-coep-sw.js
docs/: README.md
docs/integration/: react-multithreading.md
docs/patterns/: atomic-worker-shield.md  bootstrapping.md  console-log-capturing.md  cross-origin-isolation.md  deployment-guide.md  e2e-testing.md  integration-testing.md  memory-management.md  persistence.md  python-ui-offloading.md  reactive-ui.md  service-worker-caching.md  shared-memory.md  test-suite-isolation.md  unit-testing.md  vfs-explorer.md  virtual-terminal.md  webgpu-compute.md  worker-heartbeat.md  worker-load-failure.md  worker-pool.md  worker-rpc.md
docs/research/: isolation_forensics.md  production_checklist.md
docs/snippets/: atomic-shield.js  sw-isolation.js
examples/: hello_world.html  index.html
examples/debugging/: external_script.html  race_condition.html  script_not_found.html  script_runtime_error.html
examples/js/: app.js  atomic_bootstrap.js  comlink_worker.js  error.js  heartbeat_worker.js  package_loading_worker.js  pool_manager.js  pyodide_loader.js  pyodide_worker.js  pyodide_worker_error.js  (+3 more)
tests/: conftest.py  pyodide_version_mapping.py
(+90 files in other folders)
