[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyodide-patterns"
version = "0.1.0"
description = "A collection of testing and debugging patterns for Pyodide applications."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-playwright",
  "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-debug = "pytest --headed --slowmo 1000 {args:tests}"
