[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyodide-patterns"
version = "0.1.0"
description = "A collection of testing and debugging patterns for Pyodide applications."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-playwright",
  "pytest-asyncio",
  "nest-asyncio",
  "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-debug = "pytest --headed --slowmo 1000 {args:tests}"
lint = "ruff check {args:.}"
format = "ruff format {args:.}"

[tool.hatch.build.targets.wheel]
packages = ["src/pyodide_app"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T10", "N", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
